SIR model working

--- a/_libs/ralget/html/00Index.html
+++ b/_libs/ralget/html/00Index.html
@@ -33,6 +33,8 @@
 <td>Cartesian product of two ralgets</td></tr>
 <tr><td style="width: 25%;"><a href="e.html">e</a></td>
 <td>Create ralget edge</td></tr>
+<tr><td style="width: 25%;"><a href="evaluate.html">evaluate</a></td>
+<td>Evaluate a graph where nodes and edges store functions.</td></tr>
 <tr><td style="width: 25%;"><a href="get_edge_names.html">get_edge_names</a></td>
 <td>Get edge names</td></tr>
 <tr><td style="width: 25%;"><a href="multiply.html">multiply</a></td>
@@ -41,6 +43,12 @@
 <td>Add two ralget graphs</td></tr>
 <tr><td style="width: 25%;"><a href="plus.html">plus</a></td>
 <td>Add two ralget graphs - original</td></tr>
+<tr><td style="width: 25%;"><a href="ralget_sim.html">ralget_sim</a></td>
+<td>simulate data from a ralget</td></tr>
+<tr><td style="width: 25%;"><a href="render.html">render</a></td>
+<td>concat to vectors for data sim</td></tr>
+<tr><td style="width: 25%;"><a href="sumv.html">sumv</a></td>
+<td>Sum multiple ralget vertices</td></tr>
 <tr><td style="width: 25%;"><a href="v.html">v</a></td>
 <td>Create vertex</td></tr>
 </table>
