about to delete raldag files

--- a/README.html
+++ b/README.html
@@ -27,6 +27,8 @@ body {
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+<p><strong>Warning: ralget is in early development. Use for experimentation only</strong></p>
+<p><strong>DAG operations of ralget are now in the <a href="https://github.com/ianmoran11/raldag"><code>raldag</code></a> package.</strong></p>
 <h1 id="ralget">ralget</h1>
 <p>Ralget creates and combines graphs with algebraic operations.</p>
 <h3 id="combining-vertices">Combining Vertices</h3>
